2005-11-25  Patrick Lam  <plam@mit.edu>
	* src/fcint.h:
	* src/fccache.c (FcDirCacheConsume):
	* src/fccharset.c (FcCharSetUnserialize):
	* src/fcfs.c (FcFontSetUnserialize):
	* src/fclang.c (FcLangSetUnserialize):
	* src/fcname.c (FcObjectUnserialize):
	* src/fcpat.c (FcStrUnserialize, FcValueListUnserialize, 
			FcPatternUnserialize):

	Pass around FcCache *s to the Unserialize functions for extra
	consistency (and less overhead, for what that's worth).

2005-11-24  Dirk Mueller  <dmueller@suse.com>
	reviewed by: plam

	* src/fcint.h:
	* src/fcmatch.c (FcCompare*, FcFontSetSort):
	* src/fcname.c (FcNameUnparseValue):

	Inline the *PtrU functions to gain perf.
	Remove unneeded params for the FcCompare* functions.

2005-11-24  Dirk Mueller  <dmueller@suse.com>
	reviewed by: plam
	
        * src/fcint.h, fontconfig/fontconfig.h: 
        
	Move FC_BANK_DYNAMIC, FC_BANK_FIRST to internal header.

        * src/fcpat.c, src/fcint.h, src/fcname.c:
          
	Check for type validity during FcPatternAddWithBinding, don't
	verify type in FcFontMatch, don't call FcCanonicalize here
        (which always does a deep copy).

2005-11-24  Dirk Mueller  <dmueller@suse.com>
	reviewed by: plam

	* src/fcmatch.c (FcCompareNumber, FcCompareString, FcCompareFamily):
	* src/fcpat.c (FcPatternAddWithBinding):

	Make FcCompareString and FcCompareFamily less expensive.
	Only add a value for FC_FAMILY if the proposed value is a string.

2005-11-24  Dirk Mueller  <dmueller@suse.com>
	reviewed by: plam
	
	* src/fcdbg.c (FcDebug, FcDebugInit, FcPatternPrint):
	* src/fcinit.c (FcInitLoadConfig, FcInitLoadConfigAndFonts):
	* src/fcint.h (FcDebug):
	
	Inline FcDebug invocations and only initialize once, in FcInit*.
	Improve debug msg in FcPatternPrint.

2005-11-23  Frederic Crozat  <fcrozat@mandriva.com>:
	reviewed by: plam
	
	* fontconfig/fontconfig.h:
	* fc-cat/fc-cat.c:

	Minor code warning cleanups.

2005-11-23  Frederic Crozat  <fcrozat@mandriva.com>:
	reviewed by: plam
	